<resources>
    <string name="app_name">Game of Life</string>

    <string name="apply_wallpaper">Apply wallpaper</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="wallpaper_description">Wallpaper</string>
    <string name="selection_message">Please select a live wallpaper.</string>

    <string name="grid">Grid</string>

    <string name="cell_size">Cell size</string>
    <string name="grid_dimensions">Grid dimensions</string>
    <string name="suffix_pixels">pixels</string>
    <string name="suffix_cells">cells</string>

    <string name="general">General</string>

    <string name="tick_rate">Tick rate</string>
    <string name="suffix_milliseconds">milliseconds</string>
    <string name="isometric_projection">Isometric projection</string>
    <string name="highlife">Highlife</string>
    <string name="initial_population_density">Start with a population of</string>
    <string name="min_population_density">Restart when population hits</string>
    <string name="suffix_percent">percent</string>

    <string name="colors">Colors</string>

    <string name="color_primary">Primary</string>
    <string name="color_secondary">Secondary</string>
    <string name="color_background">Background</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="preference_title_placeholder">Preference Title Placeholder</string>
    <string name="value_set_seekbar_suffix_placeholder">suffix</string>

    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="incompatible_message">Unfortunately, this device is incompatible with Game of Life.</string>
</resources>
