<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:custom="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SurfaceView
            android:id="@+id/surface_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EEEEEE"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/PreferenceCard">

                    <TextView
                        style="@style/PreferenceSectionHeader"
                        android:text="@string/grid"/>

                    <com.dpanayotov.gameoflife.preferences.custom.ValueSetSeekBar
                        android:id="@+id/grid_width_height"
                        style="@style/HorizontalBar"
                        custom:show_bar="false"
                        custom:suffix="@string/suffix_cells"
                        custom:title="@string/grid_dimensions"/>

                    <com.dpanayotov.gameoflife.preferences.custom.ValueSetSeekBar
                        android:id="@+id/cell_size"
                        style="@style/HorizontalBar"
                        custom:suffix="@string/suffix_pixels"
                        custom:title="@string/cell_size"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/PreferenceCard">

                    <TextView
                        style="@style/PreferenceSectionHeader"
                        android:text="General"/>

                    <com.dpanayotov.gameoflife.preferences.custom.ValueSetSeekBar
                        android:id="@+id/tick_rate"
                        style="@style/HorizontalBar"
                        custom:suffix="@string/suffix_milliseconds"
                        custom:title="@string/tick_rate"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/isometric_projection"
                            android:textSize="16sp"/>

                        <Switch
                            android:id="@+id/isometric_projection"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/highlife"
                            android:textSize="16sp"/>

                        <Switch
                            android:id="@+id/highlife"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"/>
                    </LinearLayout>

                    <com.dpanayotov.gameoflife.preferences.custom.ValueSetSeekBar
                        android:id="@+id/min_population_density"
                        style="@style/HorizontalBar"
                        custom:suffix="@string/suffix_percent"
                        custom:title="@string/min_population_density"/>
                </LinearLayout>

                <LinearLayout style="@style/PreferenceCard">

                    <TextView
                        style="@style/PreferenceSectionHeader"
                        android:text="@string/color"/>

                    <include layout="@layout/view_color_preferences_h"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alpha="0.3 "
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alpha="0.7"
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alpha="0.9"
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:alpha="1.0"
            android:background="#EEEEEE"/>

    </LinearLayout>

</FrameLayout>



