<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/swap_left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"/>
            <android.support.v7.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_swap_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/swap_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>
            <android.support.v7.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_swap_right"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/color_background"/>

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/color_secondary"/>

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/color_primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <View
            android:id="@+id/color_background"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="#FF0000"/>
        <LinearLayout
            android:background="#FF0000"
            android:orientation="horizontal"
            android:id="@+id/color_secondary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <View
                style="@style/ColorStripe"
                android:alpha="0.15"/>

            <View
                style="@style/ColorStripe"
                android:alpha="0.33"/>

            <View
                style="@style/ColorStripe"
                android:alpha="0.5"/>
        </LinearLayout>
        <View
            android:id="@+id/color_primary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="#0000FF"/>
    </LinearLayout>

</LinearLayout>